Adapted ConfigManager for Folia.
Replaced Singleton with thread-safe pattern to ensure safe access in parallel regions